# resume-tailoring-agent

./: .gitignore  README.md  requirement.txt
resume_tailoring/: pyproject.toml
resume_tailoring/src/resume_tailoring/: __init__.py  crew.py  main.py
resume_tailoring/src/resume_tailoring/tools/: __init__.py  job_parser.py  keyword_matcher.py  pdf_export.py  pdf_parser.py
