[project]
name = "resume_tailoring"
version = "0.1.0"
description = "resume-tailoring using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
resume_tailoring = "resume_tailoring.main:run"
run_crew = "resume_tailoring.main:run"
train = "resume_tailoring.main:train"
replay = "resume_tailoring.main:replay"
test = "resume_tailoring.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
